--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="/manifest.json">
     <title>Mindful Moments</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -18,6 +22,8 @@
             animation: {
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'blob': 'blob 7s infinite',
+              'fadeIn': 'fadeIn 0.5s ease-out',
+              'slideUp': 'slideUp 0.3s ease-out',
             },
             keyframes: {
               blob: {
@@ -26,6 +32,14 @@
                 '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
                 '100%': { transform: 'translate(0px, 0px) scale(1)' },
               },
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              slideUp: {
+                '0%': { transform: 'translateY(20px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
+              }
             },
           },
         },
@@ -42,6 +56,7 @@
         background-color: #f0f4f8;
         /* Prevent bounce on iOS */
         overscroll-behavior-y: none;
+        -webkit-tap-highlight-color: transparent;
       }
       
       /* Hide scrollbar for Chrome, Safari and Opera */
