--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         --color-secondary: 165 180 252; /* Indigo-300 #a5b4fc */
         --color-accent: 244 114 182; /* Pink-400 #f472b6 */
       }
+      html, body, #root {
+        height: 100%;
+        overflow: hidden; /* Important for app-like feel */
+      }
       body {
         font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         background-color: #f0f4f8;
